refactor: change auth controller, service methods; feat: add guards and strategies
